better contrast in detail view, fixes microsoft/pxt-microbit#922

--- a/theme/highcontrast.less
+++ b/theme/highcontrast.less
@@ -298,6 +298,14 @@
                 }
             }
         }
+        .detailview {
+            .closeIcon .remove.icon {
+                background-color: @HCbackground;
+            }
+            .header {
+                color: @HCbackground;
+            }
+        }
     }
 
     .ui.form .content .description {
